# fmsabujapayroll

./: .gitignore  :w  README.md  main.py  manage.py  pyproject.toml  run.py
payroll/: app.py  config.py  decorators.py  utils.py
payroll/models/: Models.py  __init__.py  userModels.py
payroll/routers/: __init__.py  authRouters.py  filesRouters.py  payslipRouters.py  userRouters.py
scripts/: create_admin.py  run  run.sh
templates/: base.html  home.html  index.html  login.html  profile.html  register.html  user_payslips.html
templates/admin/: bulk_upload_payslips.html  create_payslip.html  create_user.html  payslips.html  users.html
templates/partials/: footer.html  head.html  header.html  payslip_list.html  sidebar.html  user_list.html  user_payslips_list.html  users_options.html
