[project]
name = "guasupayrollpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pymupdf>=1.25.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.6",
    "sqlalchemy>=2.0.38",
    "waitress>=3.0.2",
]

